# good_waves_please

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
good_waves_please/: good_waves_please.py  scratch.ipynb
good_waves_please/api/: gather_surf_data.py  paths.py  spot_ids.py
good_waves_please/api/data/: database.csv  database_update.csv  spots_id_pairs.json
good_waves_please/api/functions/: stream_surfline_data.py
good_waves_please/api/tests/: test_write.py
good_waves_please/app/: 1_👋_Good Waves Please.py  good_waves_please.py
good_waves_please/app/api/: gather_surf_data.py  paths.py  spot_ids.py
good_waves_please/app/api/data/: database.csv  database_update.csv  spot_ids.json  spot_name_ids_map.csv
good_waves_please/app/api/data/archive/: database_20240319071245.csv  database_20240319071702.csv  database_20240319071902.csv  database_20240319072052.csv  database_20240319072442.csv  database_20240319220243.csv  database_20240320090238.csv  database_20240320104822.csv  database_20240320105523.csv  database_20240320110811.csv  database_20240321161434.csv  sql_database_20240321161433.csv
good_waves_please/app/api/tests/: test_write.py
good_waves_please/app/pages/: 2_🌊_How was your surf?.py  how_was_your_surf.py
good_waves_please/pages/: how_was_your_surf.py
