[tool.poetry]
name = "good-waves-please"
version = "0.1.0"
description = "Tell me how your surfs were and find out how your surfs might be"
authors = ["Tristan New <tristannew@ymail.com>"]
readme = "README.md"
packages = [{include = "good_waves_please"}]

[tool.poetry.dependencies]
python = "^3.9.19"
pandas = "^2.2.1"
streamlit = "1.32.2"
scrapy = "^2.11.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
google-cloud-storage = "^2.16.0"
fsspec = "^2024.3.1"
gcsfs = "^2024.3.1"
st-files-connection = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
